estrutura base do site ok

--- a/src/core/templates/core/pages/home.html
+++ b/src/core/templates/core/pages/home.html
@@ -1,7 +1,8 @@
 {% extends "core/base.html" %}
+{% load static %}
 
 {% block content %}
-<section class="section section-parallax section-fullscreen home-hero pt-5">
-
+<section class="section -home">
+    Teste
 </section>
 {% endblock %}
