main page ok, footer and header ok

--- a/src/core/static/sass/colors.scss
+++ b/src/core/static/sass/colors.scss
@@ -68,6 +68,9 @@ $color-4-secondary: #3C91E6;
             color: $color-4-secondary;
         }
     }
+    &-white{
+        color: #ffffff;
+    }
 }
 
 //Transform from black to color:
