--- a/src/core/templates/core/navbar.html
+++ b/src/core/templates/core/navbar.html
@@ -13,7 +13,7 @@
                 <span class="social -text">/thalles-sales</span>
             </a>
         </div>
-        <h1 class="title -big c-s1 auto-br max-50-lg">Thalles Sales.</h1>
+        <h1 class="title -really-big c-s1 auto-br max-50-lg">Thalles Sales.</h1>
 
         <div class="flex -break"></div>
         <div class="big-text -subtitle c-s1 fill-parent pt-3 flex -row -justify-center">
