--- a/src/core/templates/core/pages/home.html
+++ b/src/core/templates/core/pages/home.html
@@ -2,7 +2,20 @@
 {% load static %}
 
 {% block content %}
-<section class="section -home">
-    Teste
+<section class="section -container -home">
+    <div class="section -home -peace" style="background-image: url({% static 'img/hand-peace3.png' %})">
+    </div>
+    <div class="section -home -content">
+        <h1 class="title -big c-s1 auto-br max-50-lg ml-n1">Thalles Sales.</h1>
+        <div class="section -home -profile-container">
+            <div class="section -home -profile-info important-text -subtitle c-white">
+                <span class="d-inline-block m-auto">Um jovem desenvolvedor de software em Belo Horizonte.</span>
+            </div>
+            <img class="section -home -profile-picture" src="{% static 'img/profile-pic.jpg' %}">
+        </div>
+        <div class="section -home -comment article-text c-white">
+            <span class="d-inline-block m-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</span>
+        </div>
+    </div>
 </section>
 {% endblock %}
