--- a/src/core/static/sass/elements.scss
+++ b/src/core/static/sass/elements.scss
@@ -64,5 +64,35 @@
         }
     }
 
+}
 
+
+.footer {
+    
+
+    &.-container {
+        z-index: 10;
+        position: absolute;
+
+        @media only screen and (max-width: 768px) {
+            bottom: -100px;
+        }
+        @media only screen and (min-width: 769px) {
+            bottom: -200px;
+        }
+
+        height: 100px;
+        width: 100%;
+
+        display: flex;
+        flex-flow: row;
+        justify-content: center;
+
+        background-color: $color-1-secondary;
+    }
+
+    &.-text {
+        align-self: center;
+        font-family: "Poppins";
+    }
 }
