--- a/src/core/static/sass/colors.scss
+++ b/src/core/static/sass/colors.scss
@@ -3,7 +3,7 @@
 $color-1-primary: #FB6542;
 $color-1-secondary: #FFF35A;
 
-$color-2-primary: #254441;
+$color-2-primary: #2F1847;
 $color-2-secondary: #E34A6F;
 
 $color-3-primary: #43AA8B;
