--- a/src/core/templates/core/footer.html
+++ b/src/core/templates/core/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer -container">
+<footer class="d-none footer -container">
     <span class="footer -text">
         Thalles Sales - 2020
     </span>
