--- a/src/core/static/sass/site.scss
+++ b/src/core/static/sass/site.scss
@@ -1,6 +1,6 @@
 /* Site */
 
-main.site {
+div.site {
     width: 100%;
     position: absolute;
     top: 0;
@@ -9,9 +9,42 @@ main.site {
 }
 
 body {
-    background-color: $color-1-secondary;
+    //background-color: $color-1-secondary;
 }
 
 * {
     margin: 0;
+}
+
+.loader {
+
+    &.-container {
+        
+    }
+
+    &.-element {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+    
+        z-index: 100;
+    
+        transform: translateY(100%);
+        //opacity: 0.5;
+
+        &.-animate {
+
+            &-up {
+    
+                &-in {
+                    transform: translateY(0);
+                    animation: loaderElementSlideInUp 0.5s $animateEaseOutBack;
+                }
+                &-out {
+                    transform: translateY(-100%);
+                    animation: loaderElementSlideOutUp 0.5s $animateEaseOutBack;
+                }
+            }
+        }
+    }
 }
