--- a/src/core/static/sass/typography.scss
+++ b/src/core/static/sass/typography.scss
@@ -82,6 +82,30 @@ html{
 .important-text {
     font-family: "Ginger Bold";
 
+    &.-card-title {
+        text-align: left;
+        @media only screen and (max-width: 768px) {
+            font-size: 1.25rem;
+            line-height: 1.55rem;
+        }
+        @media only screen and (min-width: 769px) {
+            font-size: 2.5rem;
+            line-height: 1.75rem;
+        }
+    }
+
+    &.-title {
+        text-align: left;
+        @media only screen and (max-width: 768px) {
+            font-size: 1.25rem;
+            line-height: 1.55rem;
+        }
+        @media only screen and (min-width: 769px) {
+            font-size: 2rem;
+            line-height: 1.75rem;
+        }
+    }
+
     &.-subtitle {
         text-align: left;
         @media only screen and (max-width: 768px) {
@@ -93,11 +117,24 @@ html{
             line-height: 1.5rem;
         }
     }
+
+    &.-tag {
+        font-family: "Poppins";
+        text-align: center;
+        @media only screen and (max-width: 768px) {
+            font-size: 0.75rem;
+            line-height: 1.2rem;
+        }
+        @media only screen and (min-width: 769px) {
+            font-size: 1.15rem;
+            line-height: 1.25rem;
+        }
+    }
 }
 
 .article-text {
     font-family: "Poppins";
 
-    
+
 
 }
