--- a/src/core/templates/core/pages/about.html
+++ b/src/core/templates/core/pages/about.html
@@ -1,10 +1,9 @@
-{% extends "core/base.html" %}
+{% extends type %}
 {% load static %}
 
 {% block content %}
-<section class="section -container -home">
-    <div class="section -home -peace" style="background-image: url({% static 'img/hand-peace3.png' %})">
-    </div>
+<section class="section -container -home bg-1">
+    <div class="section -home -peace"></div>
     <div class="section -home -content">
         <h1 class="title -big c-s1 auto-br max-50-lg ml-n1">Thalles Sales.</h1>
         <div class="section -home -profile-container">
