--- a/src/core/static/sass/colors.scss
+++ b/src/core/static/sass/colors.scss
@@ -7,7 +7,7 @@ $color-2-primary: #2F1847;
 $color-2-secondary: #E34A6F;
 
 $color-3-primary: #43AA8B;
-$color-3-secondary: #F28123;
+$color-3-secondary: #000022;
 
 $color-4-primary: #DB504A;
 $color-4-secondary: #3C91E6;
@@ -84,7 +84,7 @@ $color-4-secondary: #3C91E6;
         filter: invert(37%) sepia(100%) saturate(1325%) hue-rotate(318deg) brightness(93%) contrast(90%);
     }
     &-s3{
-        filter: invert(56%) sepia(17%) saturate(3251%) hue-rotate(348deg) brightness(102%) contrast(90%);
+        filter: invert(8%) sepia(33%) saturate(2418%) hue-rotate(214deg) brightness(95%) contrast(121%);
     }
     &-s4{
         filter: invert(49%) sepia(73%) saturate(1606%) hue-rotate(188deg) brightness(94%) contrast(91%);
