--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -32,7 +32,7 @@
     <body>
         <div class="site">
             <!-- navbar -->
-            {% include "core/navbar.html" with no_shrink=no_shrink current_page=page_settings.current_page icon_color=page_settings.icon_color %}
+            {% include "core/navbar.html" with no_shrink=no_shrink current_page=page_settings.current_page icon_color=page_settings.icon_color stamp_color=page_settings.stamp_color %}
 
             <!-- page content -->
             <main>
