testing bulb movement on mobile

--- a/src/core/static/sass/sections.scss
+++ b/src/core/static/sass/sections.scss
@@ -409,6 +409,7 @@
                 margin-top: 20vw;
             }
             @media only screen and (min-width: 769px) {
+                padding: 150px 10% 0 15%;
                 width: 20%;
                 min-height: calc(60vh - 150px);
                 margin: calc(70px + 8vh) 0 -20% -5%;
